style: table style update tried to fix height offset for sections while scrolling, top covered by header but not working

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,24 @@
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0px 0px 10px 0px;
-  position: relative;
+  /*position: relative;*/
 }
+
+.container1 {
+  /*margin-top: 75px;*/
+  padding-top: 75px;
+  height: 100% - 75px;
+}
+
+/* https://github.com/twbs/bootstrap/issues/1768
+*[id]:before { 
+  display: block; 
+  content: " "; 
+  margin-top: -75px; 
+  height: 75px; 
+  visibility: hidden; 
+}
+*/
 
 .inline {
   display: inline !important;
@@ -19,11 +35,25 @@ header {
   position: fixed;
   display: block;
   z-index: 500;
-  height: 50px;
-  background: #9c2020; /*#9cf;*/
+  height: 125px;
+  background: #9c2020;
   min-width: 100%;
   padding: 0px 10px;
   /*font-size: 1.5em;*/
+}
+
+.progress-bar {
+  position: fixed;
+  margin-left: -10px;
+  margin-top: -10px;
+  padding-top: 10px;
+  width: 100%;
+  height: 65px;
+  background: #c37979;
+  font-size: 1.25em;
+  /*font-style: italic;*/
+  text-align: center;
+  /*z-index: 450;*/
 }
 
 /* bootstrap */
@@ -79,7 +109,7 @@ a {
 
 @media screen and (min-width: 651px) {
   section.form {
-    padding-top: 100px;
+    padding-top: 30px;
   }
 }
 
@@ -94,23 +124,12 @@ label {
 }
 */
 
-.company-page {
+/*.company-page {
   float: right;
   margin-right: 20px;
-}
+}*/
 
-.progress-bar {
-  position: fixed;
-  margin: 50px auto 0;
-  padding-top: 10px;
-  width: 100%;
-  height: 65px;
-  background: #c37979; /*#14306b;*/ /*#ada9ba;*/ /*#fc9;*/
-  font-size: 1.25em;
-  /*font-style: italic;*/
-  text-align: center;
-  z-index: 450;
-}
+
 
 /* bootstrap */
 
@@ -135,13 +154,15 @@ section.form input {
   margin-bottom: 1em;
 }
 
-.your-order {
+/*.your-order {
   border: 1px solid;
   max-width: 100%;
 }
+*/
 
-tr.headings {
+th {
   font-weight: bold;
+  font-size: 1em;
 }
 
 tr.total {
@@ -150,7 +171,7 @@ tr.total {
 
 td {
   padding: 10px;
-  border: 1px solid;
+  /*border: 1px solid;*/
 }
 
 tr:nth-child(even) {
